test al 80% mas otras cosas

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -82,6 +82,8 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "codeCoverage": true,
+            "karmaConfig": "./karma.conf.js",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
