--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "karma-firefox-launcher": "^2.1.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "sonar-scanner": "^3.1.0",
     "typescript": "~5.5.2"
   }
 }
